--- a/my-app/src/navbar/Navbar.css
+++ b/my-app/src/navbar/Navbar.css
@@ -5,7 +5,7 @@
     align-items: center;
     position: sticky;
     width: 100%;
-    top: 10px;
+    margin-top: 10px;
     left: 0;
     padding: 1rem;
     z-index: 1000;
