--- a/my-app/src/loading/Loading.css
+++ b/my-app/src/loading/Loading.css
@@ -1,18 +1,16 @@
 .loader-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 1);
-
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    height: 100vh;
+    width: 100vw;
+    background: black;
 }
 
-.loader h1 {
-    font-size: 2rem;
-    color: #3498db;
+.loader-container.gradient {
+    background: linear-gradient(to bottom, black, #333);
+}
+
+.loader {
+    color: white;
 }
