--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,17 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  margin: 0;
+  overflow: hidden;
+}
+
+canvas {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
