--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,6 @@ body {
   overflow: hidden;
 }
 
-canvas {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.container_row{
+  display: grid;
 }
