--- a/src/background/Background.css
+++ b/src/background/Background.css
@@ -1,13 +1,12 @@
-.background-component body {
-    margin: 0;
-    overflow: hidden;
-}
-
-.background-component canvas {
-    display: block;
-    position: absolute;
+.layer1, .layer2{
+    grid-column: 1;
+    grid-row: 1;
+  }
+  
+canvas {
     top: 0;
     left: 0;
+    z-index: 0;
     width: 100%;
     height: 100%;
 }
