--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -1,7 +1,11 @@
 /* Add this to your CSS file */
-.layer1, .layer2{
+.overlay {
   grid-column: 1;
   grid-row: 1;
+}
+
+.no-click {
+  pointer-events: none;
 }
 
 .navbar {
