--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,11 @@ body {
 }
 .outer .below {
   z-index: 1;
-  background-color: aqua;
 }
 .outer .top {
   z-index: 2;
-  background-color: brown;
+}
+
+.noclick {
+  pointer-events: none;
 }
