--- a/src/work/background/Background.css
+++ b/src/work/background/Background.css
@@ -1,8 +1,14 @@
-
 canvas {
-    top: 0;
-    left: 0;
+    position: absolute; /* Ensure the canvas is positioned absolutely */
+    top: 0px; /* Move the canvas up by 5px */
+    left: 0px; /* Move the canvas left by 5px */
     z-index: 0;
-    width: 100%;
-    height: 100%;
+    width: calc(100% + 10px); /* Increase the width by 10px */
+    height: calc(100% + 10px); /* Increase the height by 10px */
+    display: block;
+}
+
+body {
+    margin: 0;
+    overflow: hidden;
 }
