--- a/src/projects/background/Background.css
+++ b/src/projects/background/Background.css
@@ -75,13 +75,17 @@
     margin-top: 20px;
     text-decoration: none;
     color: black;
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
   .project-container ul {
+    margin-top: 5px;
     line-height: 1.5;
   }
   .project-container li {
-    list-style-type: none;
     font-size: 1.25rem;
 
+  }
+
+  .margin-top {
+    margin-top: 20px;
   }
