--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,8 @@
       font-size: 2.5rem;
       line-height: 0;
       display: inline-block;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 500;
     }
     
     .navbar-links {
