--- a/src/projects/background/Background.css
+++ b/src/projects/background/Background.css
@@ -96,3 +96,12 @@
   }
 
   
+  .overlay-text {
+    position: absolute;
+    top: .5%; /* Adjust as needed */
+    left: 90%; /* Adjust as needed */
+    color: black; /* Adjust text color as needed */
+    font-size: 30px; /* Adjust font size as needed */
+    pointer-events: none; /* Ensure the text doesn't interfere with canvas interactions */
+    font-weight: bold;
+}
