--- a/src/about/background/Background.css
+++ b/src/about/background/Background.css
@@ -1,8 +1,47 @@
 
-canvas {
-    top: 0;
-    left: 0;
-    z-index: 0;
+.spacer {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    position: relative;
+  }
+  
+.red {
+    background-color: #f44336;
+  }
+
+.orange {
+    background-color: #ff9800;
+  }
+
+.blue {
+    background-color: #2196f3;
+  }
+
+.purple {
+    background-color: #673ab7;
+  }
+
+.green {
+    background-color: #4caf50;
+  }
+
+.test {
+    position: absolute;
+    top: 30%; /* Adjust as needed */
+    left: 40%; /* Adjust as needed */
+    color: black; /* Adjust text color as needed */
+    font-size: 30px; /* Adjust font size as needed */
+    pointer-events: none; /* Ensure the text doesn't interfere with canvas interactions */
+    font-weight: bold;
+}
+
+.teststicky {
+    position: fixed;
+    top: 30%;
+    left: 33%;
+    color: black;
+    font-size: 30px;
+    pointer-events: none;
+    font-weight: bold;
+    z-index: 1000;
 }
