--- a/src/about/background/Background.css
+++ b/src/about/background/Background.css
@@ -4,8 +4,14 @@
     height: 100vh;
     position: relative;
   }
-.panel {
+.apanel {
   background-color: #ffffff;
+  width: 100vw;
+  height: 100vh;
+  place-content: center;
+  align-items: center;
+  display: flex;
+  will-change: transform;
 }
 
 .red {
