--- a/src/projects/background/Background.css
+++ b/src/projects/background/Background.css
@@ -99,7 +99,19 @@
     margin-top: 20px;
   }
 
-  
+@keyframes idleX {
+    0% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(10px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+
   .overlay-text {
     position: absolute;
     top: .5%; /* Adjust as needed */
@@ -108,4 +120,5 @@
     font-size: 30px; /* Adjust font size as needed */
     pointer-events: none; /* Ensure the text doesn't interfere with canvas interactions */
     font-weight: bold;
+    animation: idleX 1.5s infinite;
 }
